[awscurl] try to use instance credentials
Change-Id: I4a840ec144794ebc45878360a22032d52b34a283